--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles.css">
-  <title>Solo Project - Random Password Generator</title>
+  <title>Random Password Generator by refuxo</title>
 </head>
 <body>
   <div class="wrapper">
