--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
           <input type="text" class="input-two" placeholder="0" />
         </div>
       </main>
+      <footer>
+        <p>Random Password Generator by <a href="https://www.linkedin.com/in/davisas/" rel='noopener' target="_blank">Davi SAS</a></p>
+      </footer>
     </div>
   </div>
   <script src="./script.js"></script>
